@@ -1,6 +1,11 @@
 devel
 -----
 
+* Fix invalid calls to `AgencyCommResult::slice()` method, which must only
+  be made in case of an agency result was retrieved successfully. In case
+  the call to the agency was not successful, `slice()` must not be called
+  on it. This change makes sure this invariant holds true.
+
 * Added permissions check before trying to read data from `_analyzers`
   collection.
   If these permissions are not there, no load is performed (user can not use
